--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   margin: 0;
   background-color: rgb(220,220,220);
   }
-  .app {
+h2, input, p, button {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+h2, p{
+  font-weight: bold;
+}
+.app {
   display: flex;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -43,7 +49,6 @@
     height: 200px;
   }
   input{
-    font-family: 'Roboto Condensed', sans-serif;
     padding: 13px!important;
     border-top-right-radius: 5px!important;
     border-bottom-right-radius: 5px!important;
@@ -68,7 +73,7 @@
   }
   .header p{
     color: #A8A8A8;
-    font-weight: 500;
+    font-weight: 600;
   }
   .load-more-wrapper{
     margin-top: 20px;
